--- a/main.html
+++ b/main.html
@@ -112,19 +112,19 @@
 </head>
 <body>
   <div class="button-container">
-    <h3> TKT-CYBER-XMD SESSION</h3>
+    <h3> Queen zani SESSION</h3>
     <div></div>
     <a href="/qr" class="button" target="_blank"> <span>QR-CODE</span> </a> <br>
     <a href="/pair" class="button" target="_blank"> <span>PAIRING-CODE</span> </a> <br>
-    <a href="https://github.com/tkttech/TKT-CYBER-XMD/fork" class="button" target="_blank"> <span>FORK TKT-CYBER-XMD</span> </a> <br> </a>
-    <a href="https://whatsapp.com/channel/0029Vb5vbMM0LKZJi9k4ED1a" class="button" target="_blank"> <span>WhatsApp</span> </a> <br>
+    <a href="https://wa.me/+94719827972?text=Hi👻cudu🩷🫶🏻" class="button" target="_blank"> <span>FORK QUEEN-ZANI</span> </a> <br> </a>
+    <a href="https://whatsapp.com/channel/0029Vb6pI1VBqbrIwyeZr12t" class="button" target="_blank"> <span>WhatsApp</span> </a> <br>
 
     <p>FACE ANY ISSUES CLICK ERROR BUTTON</p>
 
-    <a href="https://wa.me/263718095555" class="button" target="_blank"> <span>ERROR</span> </a> <br>
+    <a href="https://wa.me/94719827972" class="button" target="_blank"> <span>ERROR</span> </a> <br>
 
     <footer>
-     TKT-CYBER-XMD &copy; <span id="currentYear"></span>
+     QUEEN-ZANI &copy; <span id="currentYear"></span>
     </footer>
   
 </body>
