--- a/pair.html
+++ b/pair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TKT-CYBER-XMD PAIR CODE</title>
+  <title>QUEEN-ZANI PAIR CODE</title>
   <link rel="stylesheet" href="css/all.min.css">
   <style>
     body {
@@ -10,7 +10,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/1cp4yq.jpeg"); /* Set the background image */
+      background-image: url("https://i.ibb.co/Vpz1mknw/IMG2-URL-ROBOT-687892a5af522.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -169,10 +169,10 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h2 class="centered-text">TKT-CYBER-XMD PAIR</h2>           
-            <h6>⚙Enter your number with country code.⚙</h6>
+            <h2 class="centered-text">QUEEN-ZANI PAIR</h2>           
+            <h6>⚙Enter your number with country code.👻⚙</h6>
             <div class="input-container">
-              <input placeholder="2637809977***" type="number" id="number" placeholder="⚙Enter your phone number with country code⚙" name="">
+              <input placeholder="9471982***" type="number" id="number" placeholder="⚙Enter your phone number with country code⚙" name="">
               <button id="submit">enter</button>
             </div>
            
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <div class="glowing-text">Powered By Tafadzwa Tkt</div>
+    <div class="glowing-text">ᴘᴏᴡᴇʀᴇᴅ ʙʏ Qᴜᴇᴇɴ ᴢᴀɴɪ Tkt</div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
